// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 0 expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling
     
    $0.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling
     
    $1.23
  </h1>
</div>
`;

exports[`should render ExpensesSummary with 2 expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling
     
    $0.12
  </h1>
</div>
`;
